--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -73,3 +73,5 @@ jobs:
           git add README.md
           git commit -m ':sparkles: update guestbook'
           git push
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
